Thu Apr 12 01:02:53 BST 2007  Olly Betts <olly@survex.com>

	* common/safesysstat.h: Under __WIN32__, provide a POSIX-like mkdir()
	  wrapper which takes 2 arguments, but ignores the file mode, so we
	  can just call mkdir with a mode argument everywhere.
	* common/utils.h: Remove special case handling of mkdir.
	* bin/xapian-compact.cc: Replace uses of om_tostring() with a call
	  to sprintf.  No longer need to `#include "utils.h"'.

Thu Apr 12 00:44:18 BST 2007  Olly Betts <olly@survex.com>

	* api/,backends/inmemory/inmemory_positionlist.cc,common/,matcher/, 
	  net/remoteconnection.cc,net/serialise.cc: omdebug.h only includes
	  omassert.h for the trivial "STRINGIZE" macro, so just duplicate
	  that rather than pulling in an extra header everywhere.  Then fix
	  up the two dozen files which were relying on this implicit
	  inclusion!

Thu Apr 12 00:10:48 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.cc: Tweak #ifdef XAPIAN_DEBUG_VERBOSE to
	  include DEBUGLINE() for clarity (no change in behaviour).

Wed Apr 11 23:36:10 BST 2007  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Fix regression introduced by
	  Richard's change, and restructure to make the handling for each case
	  more obvious.
	* tests/queryparsertest.cc: Add a couple of testcases for the
	  regression.
	* queryparser/queryparser_internal.h: Remove reference to "bool" in
	  comment which no longer applies.

Wed Apr 11 21:25:36 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* queryparser/queryparser_internal.h: Refactor boolean "flag"
	  member in BoolAndString class into an enum of possible prefix
	  types.  Rename "flag" to "type".  Rename BoolAndString to
	  PrefixInfo.
	* queryparser/queryparser.cc: Change add_prefix() and
	  add_boolean_prefix() to match changes to queryparser_internal.h
	* queryparser/queryparser.lemony: Refactor handling of prefixed
	  terms to match queryparser_internal, and to use a switch()